--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
 
-import Hero from '~/components/widgets/Hero.astro';
 import Note from '~/components/widgets/Note.astro';
 import Features from '~/components/widgets/Features.astro';
 import Features2 from '~/components/widgets/Features2.astro';
@@ -11,9 +10,12 @@ import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 import FAQs from '~/components/widgets/FAQs.astro';
 import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
+import Hero2 from '~/components/widgets/Hero2.astro';
+import { getPermalink } from '~/utils/permalinks';
+import Carousel from '~/components/custom/Carousel.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'GVR',
   ignoreTitleTemplate: true,
 };
 ---
@@ -21,9 +23,26 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- Hero Widget ******************* -->
 
-  <Hero
-    callToAction={{ text: 'Get template', href: 'https://github.com/onwidget/astrowind', icon: 'tabler:download' }}
-    callToAction2={{ text: 'Learn more', href: '#features' }}
+  <Hero2
+    title="One stop solution for all your roadways needs"
+    image={{
+      src: '~/assets/images/traffic-1.jpg',
+      alt: 'Traffic Image',
+    }}
+    callToAction={{ text: 'Get in touch', href: getPermalink('/contact') }}
+  >
+    <Fragment slot="subtitle">
+      <span class="hidden sm:inline"> <span class="font-semibold">GVR</span> is a blah blah and blah.</span>
+      <span class="block mb-1 sm:hidden font-bold text-blue-600"></span>
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua.
+    </Fragment>
+
+    <Carousel slot="image" images={['~/assets/images/traffic-1.jpg', '~/assets/images/hero.png']} />
+  </Hero2>
+
+  <!-- <Hero
+    callToAction={{ text: 'Get in touch', href: getPermalink('/contact') }}
     image={{ src: '~/assets/images/hero.png', alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
@@ -40,7 +59,7 @@ const metadata = {
        Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages
       & Blogs.
     </Fragment>
-  </Hero>
+  </Hero> -->
 
   <!-- Note Widget ******************* -->
 
@@ -320,7 +339,7 @@ const metadata = {
     title="Frequently Asked Questions"
     subtitle="Dive into the following questions to gain insights into the powerful features that AstroWind offers and how it can elevate your web development journey."
     tagline="FAQs"
-    classes={{ container: 'max-w-6xl'}}
+    classes={{ container: 'max-w-6xl' }}
     items={[
       {
         title: 'Why AstroWind?',
