Add services blurb on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,26 +41,6 @@ const metadata = {
     </Fragment>
   </Hero2>
 
-  <!-- <Hero
-    callToAction={{ text: 'Get in touch', href: getPermalink('/contact') }}
-    image={{ src: '~/assets/images/hero.png', alt: 'AstroWind Hero Image' }}
-  >
-    <Fragment slot="title">
-      Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white highlight"> Astro 2.0</span> + Tailwind CSS
-    </Fragment>
-
-    <Fragment slot="subtitle">
-      <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 2.0
-        + Tailwind CSS.</span
-      >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
-       Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages
-      & Blogs.
-    </Fragment>
-  </Hero> -->
-
   <!-- Note Widget ******************* -->
 
   <Note />
@@ -68,45 +48,45 @@ const metadata = {
   <!-- Features Widget *************** -->
 
   <Features
-    id="features"
-    tagline="Features"
-    title="What you get with AstroWind"
-    subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022."
+    id="services"
+    tagline="Services"
+    title="What you get with GVR"
+    subtitle="One of the most professional and comprehensive contractors currently on the market in the Greator Hyderabad Area."
     items={[
       {
-        title: 'Astro + Tailwind CSS Integration',
+        title: 'Road Design and Planning',
         description:
-          'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
-        icon: 'tabler:brand-tailwind',
-      },
-      {
-        title: 'Ready-to-use Components',
-        description:
-          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
-        icon: 'tabler:components',
-      },
-      {
-        title: 'Best Practices',
-        description:
-          'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
+          'Expertise in creating efficient and safe road networks, ensuring optimal traffic flow and adherence to regulations.',
         icon: 'tabler:list-check',
       },
       {
-        title: 'Excellent Page Speed',
+        title: 'Asphalt Paving and Resurfacing',
         description:
-          'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
+          'Skilled in laying high-quality asphalt surfaces that withstand heavy traffic and adverse weather conditions, enhancing road longevity.',
+        icon: 'tabler:components',
+      },
+      {
+        title: 'Bridge Construction and Repair',
+        description:
+          'Specialized in building and restoring durable bridges that ensure seamless connectivity and safety for commuters.',
+        icon: 'tabler:list-check',
+      },
+      {
+        title: 'Traffic Management Systems',
+        description:
+          'Implementing advanced traffic control solutions to manage congestion, enhance safety, and improve overall road user experience.',
         icon: 'tabler:rocket',
       },
       {
-        title: 'Search Engine Optimization (SEO)',
+        title: 'Pothole Repairs and Maintenance',
         description:
-          "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
+          'Swift and effective solutions to eliminate potholes, maintaining a smooth and hazard-free driving surface.',
         icon: 'tabler:arrows-right-left',
       },
       {
-        title: 'Open to new ideas and contributions',
+        title: 'Erosion Control Measures',
         description:
-          'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
+          'Implementing erosion prevention techniques to safeguard roads and highways from natural elements, ensuring long-lasting infrastructure stability.',
         icon: 'tabler:bulb',
       },
     ]}
